--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,33 @@ steps:
         from_secret: DOCKER_USER
       DOCKER_PASSWORD:
         from_secret: DOCKER_PASSWORD
-      IMAGE: mysql-backup-to-azure
+      IMAGE: mysql-backup-to-azure:develop
+    commands:
+      - sleep 5 #
+      - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      - docker build . -t $DOCKER_USER/$IMAGE
+      - docker push $DOCKER_USER/$IMAGE
+volumes:
+  - name: dockersock
+    host:
+      path: /run
+---
+kind: pipeline
+type: kubernetes
+name: production
+
+steps:
+  - name: build-push
+    image: docker:dind
+    volumes:
+      - name: dockersock
+        path: /run
+    environment:
+      DOCKER_USER:
+        from_secret: DOCKER_USER
+      DOCKER_PASSWORD:
+        from_secret: DOCKER_PASSWORD
+      IMAGE: mysql-backup-to-azure:latest
     commands:
       - sleep 5 #
       - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
