--- a/.drone.yml
+++ b/.drone.yml
@@ -41,7 +41,7 @@ steps:
       IMAGE: mysql-backup-to-azure
     commands:
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-    - docker tag -t $DOCKER_USER/$IMAGE:$DRONE_COMMIT_SHA $DOCKER_USER/$IMAGE_NAME:latest
+    - docker tag $DOCKER_USER/$IMAGE:$DRONE_COMMIT_SHA $DOCKER_USER/$IMAGE_NAME:latest
     - docker push $DOCKER_USER/$IMAGE_NAME
 
 volumes:
