tweaking drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -16,8 +16,9 @@ steps:
     commands:
       - sleep 5 #
       - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-      - docker build . -t $DOCKER_USER/$IMAGE:develop
-      - docker push $DOCKER_USER/$IMAGE:develop
+      - docker build . -t $DOCKER_USER/$IMAGE:$DRONE_COMMIT_SHA
+      - docker tag $DOCKER_USER/$IMAGE:$DRONE_COMMIT_SHA $DOCKER_USER/$IMAGE:develop
+      - docker push $DOCKER_USER/$IMAGE
 volumes:
   - name: dockersock
     host:
