--- a/k8s/secrets.yml.example
+++ b/k8s/secrets.yml.example
@@ -7,6 +7,10 @@ stringData:
   host: mysql
   user: root
   password: changeme
+  compress: "true"
+  encrypt: "true"
+  encryptKey: changetoRandom
+
 ---
 apiVersion: v1
 kind: Secret
