--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/storage-blob": "^12.2.0-preview.1",
     "@mysql.js/mysql": "^0.8.0",
     "async-gzip-gunzip": "^1.0.2",
+    "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
