--- a/k8s/secrets.yml.example
+++ b/k8s/secrets.yml.example
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql
+  name: mysql-backup
 type: Opaque
 stringData:
   host: mysql
   user: root
+  port: "3306"
   password: changeme
   compress: "true"
-  encrypt: "true"
+  encrypt: "false"
   encryptKey: changetoRandom
 
 ---
@@ -21,3 +22,4 @@ stringData:
   account: changeme
   accountKey: changeme
   container: backup
+  backupfilePrefix: backup_  
